[package]
name = "backtick"
version = "0.1.1"
edition = "2024"
author = "R. \"Dot Underscore\" L"
license = "MIT"
description = "An efficient multi-threaded logging library made in Rust."
repository = "https://github.com/ArchDustro/backtick"

[dependencies]
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["fs", "io-util"] }
zbus = "5.16.0"
